secops/authentik/server/ingress.yaml
---
# Source: authentik/templates/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-server
  namespace: "authentik"
  labels:
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/component: "server"
    app.kubernetes.io/part-of: "authentik"
  annotations:
    cert-manager.io/cluster-issuer: internal
spec:
  ingressClassName: traefik
  rules:
    - host: "authentik.lab.8none1.com"
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-authentik-embedded-outpost
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
  tls:
    - hosts:
        - "authentik.lab.8none1.com"
      secretName: authentik-ingress-tls
