secops/authentik/server/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: kustomize
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.home.8none1.com
    external-dns.alpha.kubernetes.io/target: traefik.srv.8none1.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.home.8none1.com`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: ak-outpost-authentik-embedded-outpost
          port: 9000
    - match: Host(`auth.home.8none1.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: authentik-server
          port: http
  tls:
    secretName: authentik-ingress-tls
